Fix issues page layout problem changing min-height from 400px to 420px in css/less

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2717,7 +2717,7 @@ body.two-sidebars .region-below-content {
   top: -1px;
   padding-bottom: 14px;
   padding-top: 14px;
-  min-height: 400px;
+  min-height: 420px;
   box-sizing: border-box;
 }
 .issue:after {
@@ -4827,7 +4827,7 @@ input[value="Back"] {
   background-color: #181f23;
   color: #d83c3c;
 }
-/* 
+/*
    Shopping Cart Block
    ========================================================================== */
 #block-views-cart-badge-block {
@@ -5101,9 +5101,9 @@ input[value="Back"] {
 /* Shopping Cart Block
 ----------------------------------------------------------------------------------------------------*/
 #block-va-cart-utilities-cart-info {
-  /* 
-	background: @black url('../images/textures/subtlepatterns/classy_fabric.png') repeat; 
-	.border-radius-multiple(0,4px,4px,0);		
+  /*
+	background: @black url('../images/textures/subtlepatterns/classy_fabric.png') repeat;
+	.border-radius-multiple(0,4px,4px,0);
 	*/
   background: #c42e00 url('../images/textures/subtlepatterns/white_carbon_red.png') repeat;
   color: #ffffff;
@@ -6473,7 +6473,7 @@ select:focus {
 
 	MeanMenu 2.0.6
 	--------
-	
+
 	To be used with jquery.meanmenu.js by Chris Wharton (http://www.meanthemes.com/plugins/meanmenu/)
 
 ####################################################################### */
@@ -6796,7 +6796,7 @@ a.meanmenu-reveal {
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
-/* 
+/*
    Responsive Image
    ========================================================================== */
 .img-normal {
@@ -6804,7 +6804,7 @@ a.meanmenu-reveal {
   width: auto;
   height: auto;
 }
-/* 
+/*
    Utility
    ========================================================================== */
 .left {
@@ -6884,7 +6884,7 @@ a.meanmenu-reveal {
 .nomargin {
   margin: 0 !important;
 }
-/* 
+/*
    Absolute Positioning
    ========================================================================== */
 .absolute-center {
@@ -6910,7 +6910,7 @@ a.meanmenu-reveal {
   right: 0;
 }
 /*
-* 	Owl Carousel Owl Demo Theme 
+* 	Owl Carousel Owl Demo Theme
 *	v1.3.3
 */
 .owl-wrapper {
@@ -7382,7 +7382,7 @@ a.meanmenu-reveal {
 }
 .socialmedia {
   margin: 8px 0 0 0;
-  /* --------------------------------------------------------------------------------------------------------------	
+  /* --------------------------------------------------------------------------------------------------------------
 All images are in folders as below:
 
 COLOUR SQUARES 	../images/social/squares/facebook.png
@@ -8028,7 +8028,7 @@ hr,
   border-bottom: 2px solid #c0c4c6;
   display: block;
 }
-/* 
+/*
    Vertical tabs used on product page ie "overview, accommodation, meals"
    ========================================================================== */
 div.vertical-tabs {
@@ -8148,7 +8148,7 @@ div.vertical-tabs .vertical-tabs-panes .field-label {
   }
 }
 div.vertical-tabs .vertical-tabs-panes .field-type-text-long {
-  /* 
+  /*
 			p:nth-child(1) {
 			    width: 46%;
 			    margin-right: 4%;
@@ -8164,7 +8164,7 @@ div.vertical-tabs .vertical-tabs-panes .field-type-text-long {
 /* ==========================================================================
    Slide Content Type & Fullwidth Video
    ========================================================================== */
-/* 
+/*
    View Using Display Suite Teaser Code Fields
    ========================================================================== */
 #block-views-homepage-slider-block-1 {
@@ -8349,7 +8349,7 @@ div.vertical-tabs .vertical-tabs-panes .field-type-text-long {
   position: absolute;
   z-index: 99;
 }
-/* 
+/*
    View Using View Fields
    ========================================================================== */
 .view-homepage-slider.view-display-id-block_0 {
@@ -8492,9 +8492,9 @@ div.mc-image {
   -o-transition: opacity 1s ease-in-out;
   transition: opacity 1s ease-in-out;
   /*If you are using horizontal slide transitions, use the following CSS:
-	-webkit-transition: left 1s ease-in-out; 
-	-moz-transition: left 1s ease-in-out; 
-	-o-transition: left 1s ease-in-out; 
+	-webkit-transition: left 1s ease-in-out;
+	-moz-transition: left 1s ease-in-out;
+	-o-transition: left 1s ease-in-out;
 	transition: left 1s ease-in-out;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -8662,7 +8662,7 @@ div.mc-image {
   }
 }
 /*
-Back to top button 
+Back to top button
 */
 #back-top {
   position: fixed;
